--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
             android:label="@string/title_activity_main2"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name="com.knu.krasn.knuscheduler.SettingsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.withActionBar" />
+
+        <service
+            android:name="com.knu.krasn.knuscheduler.ServiceUtils.Notification"
+            android:enabled="true" />
     </application>
 
 </manifest>
