--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="com.knu.krasn.knuscheduler.ApplicationClass"
@@ -33,8 +35,8 @@
             android:theme="@style/AppTheme.withActionBar" />
 
         <service
-            android:name="com.knu.krasn.knuscheduler.ServiceUtils.Notification"
-            android:enabled="true" />
+            android:name="com.knu.krasn.knuscheduler.ServiceUtils.NotificationService"
+            android:exported="false" />
     </application>
 
 </manifest>
