--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:name="com.knu.krasn.knuscheduler.ApplicationClass"
@@ -14,8 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="com.knu.krasn.knuscheduler.MainActivity"
+        android:theme="@style/SplashTheme">
+        <activity
+            android:name="com.knu.krasn.knuscheduler.Activities.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,17 +25,17 @@
 
         </activity>
         <activity
-            android:name="com.knu.krasn.knuscheduler.ScheduleActivity"
+            android:name="com.knu.krasn.knuscheduler.Activities.ScheduleActivity"
             android:label="@string/title_activity_main2"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="com.knu.krasn.knuscheduler.SettingsActivity"
+            android:name="com.knu.krasn.knuscheduler.Activities.SettingsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.withActionBar" />
 
         <service
-            android:name="com.knu.krasn.knuscheduler.ServiceUtils.NotificationService"
+            android:name="com.knu.krasn.knuscheduler.Utils.ServiceUtils.NotificationService"
             android:exported="false" />
     </application>
 
