--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -16,10 +17,10 @@ android {
     }
 
     signingConfigs {
-        config {
+        release {
             keyAlias 'schedule'
             keyPassword 'EbalVasVRot1Begemot'
-            storeFile file('/home/slava/projects/carehome-android/Krasnov')
+            storeFile file('keystore.jks')
             storePassword 'EbalVasVRot1Begemot'
         }
     }
@@ -30,6 +31,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -40,28 +42,28 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-v4:28.0.0-beta01'
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-beta01'
-    implementation 'com.android.support:design:28.0.0-beta01'
-    implementation 'com.android.support:cardview-v7:28.0.0-beta01'
+    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support:cardview-v7:28.0.0-rc01'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    implementation "android.arch.work:work-runtime:1.0.0-alpha06"
-    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha04"
+    implementation "android.arch.work:work-runtime:1.0.0-alpha07"
+    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha05"
     implementation "android.arch.paging:runtime:1.0.1"
-    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha04"
+    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha05"
     kapt "android.arch.lifecycle:compiler:1.1.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
