Changed package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.knu.krasn.knuscheduler"
+        applicationId "geek.owl.com.ua.KNUSchedule"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 13
