--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
 
     <application
-        android:name="com.knu.krasn.knuscheduler.AppClass"
+        android:name="geek.owl.com.ua.KNUSchedule.AppClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,7 +17,7 @@
         android:fullBackupContent="true">
 
         <activity
-            android:name="com.knu.krasn.knuscheduler.View.Activity.SplashActivity"
+            android:name="geek.owl.com.ua.KNUSchedule.View.Activity.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.knu.krasn.knuscheduler.View.Activity.MainActivity"
+            android:name="geek.owl.com.ua.KNUSchedule.View.Activity.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
     </application>
