--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    var = '0.25.3-eap13'
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext.kotlin_version = '1.2.61'
     repositories {
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+
+        maven { url "https://maven.google.com" }
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha07'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha10'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.google.gms:google-services:4.0.1'
+
 
     }
 }
@@ -19,9 +22,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
         google()
 
     }
