--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 //    androidExtensions {
 //        experimental = true
 //    }
@@ -52,7 +54,8 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-rc02'
 //    implementation 'com.google.firebase:firebase-crash:16.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
@@ -65,7 +68,7 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation "android.arch.work:work-runtime:1.0.0-alpha08"
+    implementation "android.arch.work:work-runtime:1.0.0-alpha09"
     implementation "android.arch.navigation:navigation-ui:1.0.0-alpha05"
     implementation "android.arch.paging:runtime:1.0.1"
     implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha05"
