--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,6 @@ android {
         versionName "4.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        kotlin { experimental { coroutines 'enable' } }
     }
 
     signingConfigs {
@@ -49,29 +48,29 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0-rc02'
+    implementation 'com.android.support:support-v4:28.0.0'
 //    implementation 'com.google.firebase:firebase-crash:16.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.27.0-eap13"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
-    implementation 'com.android.support:design:28.0.0-rc02'
-    implementation 'com.android.support:cardview-v7:28.0.0-rc02'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.work:work-runtime:1.0.0-alpha09"
-    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha05"
+    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha06"
     implementation "android.arch.paging:runtime:1.0.1"
-    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha05"
+    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha06"
     kapt "android.arch.lifecycle:compiler:1.1.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
