--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     targetSdkVersion 28
     versionCode 13
     versionName "4.3"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     vectorDrawables.useSupportLibrary = true
   }
 
@@ -47,30 +47,30 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation 'com.android.support:appcompat-v7:28.0.0'
-  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-  implementation 'com.android.support:support-v4:28.0.0'
+  implementation 'androidx.appcompat:appcompat:1.0.2'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 //    implementation 'com.google.firebase:firebase-crash:16.0.1'
   testImplementation 'junit:junit:4.12'
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.27.0-eap13"
-  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.2-eap13'
   implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
   implementation 'com.squareup.retrofit2:retrofit:2.4.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
   implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-  implementation 'com.android.support:recyclerview-v7:28.0.0'
-  implementation 'com.android.support:design:28.0.0'
-  implementation 'com.android.support:cardview-v7:28.0.0'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-  implementation "android.arch.persistence.room:runtime:1.1.1"
-  kapt "android.arch.persistence.room:compiler:1.1.1"
-  implementation "android.arch.lifecycle:extensions:1.1.1"
-  implementation "android.arch.work:work-runtime:1.0.0-alpha09"
-  implementation "android.arch.navigation:navigation-ui:1.0.0-alpha06"
-  implementation "android.arch.paging:runtime:1.0.1"
-  implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha06"
-  kapt "android.arch.lifecycle:compiler:1.1.1"
+  implementation 'androidx.recyclerview:recyclerview:1.0.0'
+  implementation 'com.google.android.material:material:1.1.0-alpha01'
+  implementation 'androidx.cardview:cardview:1.0.0'
+  androidTestImplementation 'androidx.test:runner:1.1.0'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+  implementation 'androidx.room:room-runtime:2.1.0-alpha02'
+  kapt 'androidx.room:room-compiler:2.1.0-alpha02'
+  kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+  implementation "android.arch.work:work-runtime:1.0.0-alpha11"
+  implementation "android.arch.navigation:navigation-ui:1.0.0-alpha07"
+  implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha07"
+  kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 }
