--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 //apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -68,8 +68,8 @@ dependencies {
 
   implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
   implementation "android.arch.work:work-runtime:1.0.0-alpha11"
-  implementation "android.arch.navigation:navigation-ui:1.0.0-alpha07"
-  implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha07"
+  implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha07'
+  implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07'
   kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
