--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.0.2'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'androidx.gridlayout:gridlayout:1.0.0'
 //    implementation 'com.google.firebase:firebase-crash:16.0.1'
   testImplementation 'junit:junit:4.12'
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.2-eap13'
