--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,13 +66,15 @@ dependencies {
   implementation 'androidx.room:room-runtime:2.1.0-alpha02'
   kapt 'androidx.room:room-compiler:2.1.0-alpha02'
   kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
-
+  implementation "androidx.paging:paging-runtime:2.1.0-rc01"
   implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
   implementation "android.arch.work:work-runtime:1.0.0-alpha11"
   implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha07'
   implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07'
   kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
 
 }
 
