--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
 
   <application
+      android:label="@string/app_name"
     android:name="geek.owl.com.ua.KNUSchedule.AppClass"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
