--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,85 +2,91 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'com.google.gms.google-services'
 
 android {
-  compileSdkVersion 28
-  defaultConfig {
-    applicationId "geek.owl.com.ua.KNUSchedule"
-    minSdkVersion 21
-    targetSdkVersion 28
-    versionCode 13
-    versionName "4.3"
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    vectorDrawables.useSupportLibrary = true
-  }
+    compileSdkVersion 28
+    defaultConfig {
+        applicationId "geek.owl.com.ua.KNUSchedule"
+        minSdkVersion 21
+        targetSdkVersion 28
+        versionCode 13
+        versionName "4.3"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+    }
 
-  signingConfigs {
-    release {
-      keyAlias 'schedule'
-      keyPassword 'EbalVasVRot1Begemot'
-      storeFile file('keystore.jks')
-      storePassword 'EbalVasVRot1Begemot'
+    signingConfigs {
+        release {
+            keyAlias 'schedule'
+            keyPassword 'EbalVasVRot1Begemot'
+            storeFile file('keystore.jks')
+            storePassword 'EbalVasVRot1Begemot'
+        }
     }
-  }
-  dataBinding {
-    enabled = true
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-      signingConfig signingConfigs.release
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro'
+        }
     }
-  }
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
-  packagingOptions {
-    exclude 'META-INF/proguard/androidx-annotations.pro'
-  }
-  buildToolsVersion = '28.0.3'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+    buildToolsVersion = '28.0.3'
 
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-  implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
 //    implementation 'com.google.firebase:firebase-crash:16.0.1'
-  testImplementation 'junit:junit:4.12'
-  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.2-eap13'
-  implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-  implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-  implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-  implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-  implementation 'androidx.recyclerview:recyclerview:1.0.0'
-  implementation 'androidx.cardview:cardview:1.0.0'
-  androidTestImplementation 'androidx.test:runner:1.1.0'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-  implementation 'androidx.room:room-runtime:2.1.0-alpha02'
-  kapt 'androidx.room:room-compiler:2.1.0-alpha02'
-  kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
-  implementation "androidx.paging:paging-runtime:2.1.0-rc01"
-  implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.google.firebase:firebase-crash:16.2.0'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+    testImplementation 'junit:junit:4.12'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.2-eap13'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.room:room-runtime:2.1.0-alpha02'
+    kapt 'androidx.room:room-compiler:2.1.0-alpha02'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    implementation "androidx.paging:paging-runtime:2.1.0-rc01"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
-  implementation "android.arch.work:work-runtime:1.0.0-alpha11"
-  implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha07'
-  implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07'
-  kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
+    implementation "android.arch.work:work-runtime:1.0.0-alpha11"
+    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha07'
+    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
 }
 
 repositories {
-  maven {
-    url 'https://maven.google.com'
-    // Alternative URL is 'https://dl.google.com/dl/android/maven2/'
-  }
-  mavenCentral()
+    maven {
+        url 'https://maven.google.com'
+        // Alternative URL is 'https://dl.google.com/dl/android/maven2/'
+    }
+    mavenCentral()
 }
